# om-file-format

./: .gitignore  .gitmodules  .releaserc  Cargo.toml  Cross.toml  Package.swift  README.md  package-lock.json  package.json
.github/workflows/: c-msvc.yml  release.yml  rust-test.yml  rust-tests.yml  semantic-pr-check.yml  swift-test.yml  test.yml
Swift/OmFileFormat/: DataAsClass.swift  FileHandleExtension.swift  FileHandleWithCount.swift  Interpolation.swift  MmapFile.swift  OmBufferedWriter.swift  OmFileDataTypeProtocol.swift  OmFileFormat.swift  OmFileReader.swift  OmFileReaderArray.swift  OmFileReaderAsync.swift  OmFileReaderAsyncProtocol.swift  OmFileReaderProtocol.swift  OmFileWriter.swift  OmFileWriterBackend.swift  OmReaderInterpolation.swift  OmString.swift  ReaderBackend.swift  ReaderBackendAsync.swift  UnsafePointer+Sendable.swift  WriterBackend.swift
Tests/OmFileFormatTests/: OmFileFormatTests.swift
c/include/: config.h  om_common.h  om_decoder.h  om_encoder.h  om_file_format.h  om_variable.h  sse_neon.h
c/src/: bitpack.c  bitunpack.c  bitutil.c  fp.c  graec.c  om_common.c  om_decoder.c  om_encoder.c  om_variable.c  vint.c  vp4c.c  vp4d.c
rust/om-file-format-c-rs/: Cargo.toml  Cross.toml  build.rs
rust/om-file-format-sys/: Cargo.toml  build.rs
rust/om-file-format-sys/src/: lib.rs
